objects/Customer_and_Suppliers_by_Cities__x.object
<CustomObject>
    <description>Customer_and_Suppliers_by_Cities</description>
    <externalDataSource>Odata_Sample</externalDataSource>
    <externalName>Customer_and_Suppliers_by_Cities</externalName>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <externalDeveloperName>City</externalDeveloperName>
        <label>City</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <description>CompanyName</description>
        <externalDeveloperName>CompanyName</externalDeveloperName>
        <label>CompanyName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <description>ContactName</description>
        <externalDeveloperName>ContactName</externalDeveloperName>
        <label>ContactName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>Relationship</description>
        <externalDeveloperName>Relationship</externalDeveloperName>
        <label>Relationship</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <label>Customer_and_Suppliers_by_Cities</label>
    <pluralLabel>Customer_and_Suppliers_by_Cities</pluralLabel>
</CustomObject>